--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@solid-primitives/memo": "^1.1.2",
+    "sass": "^1.57.1",
     "solid-js": "^1.5.1"
   }
 }
