--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@solid-primitives/memo": "^1.1.2",
     "sass": "^1.57.1",
+    "socket.io-client": "^4.5.4",
     "solid-js": "^1.5.1"
   }
 }
