--- a/package.json
+++ b/package.json
@@ -1,23 +1,46 @@
 {
-  "name": "vite-template-solid",
+  "name": "pairs",
   "version": "0.0.0",
   "description": "",
   "scripts": {
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "solid-jest/preset/browser",
+    "setupFilesAfterEnv": [
+      "<rootDir>/node_modules/@testing-library/jest-dom"
+    ]
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-typescript": "^7.23.3",
+    "@solidjs/testing-library": "^0.8.6",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@types/jest": "^29.5.12",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "babel-jest": "^29.7.0",
+    "babel-preset-jest": "^29.6.3",
+    "babel-preset-solid": "^1.8.9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^23.2.0",
+    "regenerator-runtime": "0.14.1",
+    "sass": "^1.71.1",
+    "solid-devtools": "^0.29.2",
+    "solid-jest": "^0.2.0",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
     "@solid-primitives/memo": "^1.1.2",
-    "sass": "^1.57.1",
     "socket.io-client": "^4.5.4",
-    "solid-js": "^1.5.1"
+    "solid-js": "^1.8.15"
   }
 }
