--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pairs",
   "version": "0.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -13,11 +14,12 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "jsdom": "^24.0.0",
     "sass": "^1.71.1",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
+    "typescript": "^5.4.4",
+    "vite": "^5.2.8",
     "vite-plugin-solid": "^2.3.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0"
   },
   "dependencies": {
     "@solid-primitives/memo": "^1.1.2",
