--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@solidjs/testing-library": "^0.8.9",
+    "@testing-library/jest-dom": "^6.4.7",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "jsdom": "^24.0.0",
