--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^6.4.7",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
+    "happy-dom": "^14.12.3",
     "jest": "^29.7.0",
     "jsdom": "^24.0.0",
     "sass": "^1.71.1",
