--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.4.4",
     "vite": "^5.2.8",
     "vite-plugin-solid": "^2.3.0",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^1.4.0"
   },
   "dependencies": {
