--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "jsxImportSource": "solid-js",
     "types": ["vite/client", "jest", "@testing-library/jest-dom"],
     "noEmit": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
