--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pairs",
+  "name": "pairs-web",
   "version": "0.0.0",
   "description": "",
   "type": "module",
@@ -15,10 +15,7 @@
     "@solidjs/testing-library": "^0.8.9",
     "@testing-library/jest-dom": "^6.4.7",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
     "happy-dom": "^14.12.3",
-    "jest": "^29.7.0",
-    "jsdom": "^24.0.0",
     "sass": "^1.71.1",
     "typescript": "^5.4.4",
     "vite": "^5.2.8",
